# reflectapi

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  Readme.md  biome.json  structured-codegen-pipeline-proposal.md
reflect/: Cargo.toml
reflect-cli/: Cargo.toml
reflect-cli/src/: main.rs
reflect-cli/src/codegen/: mod.rs
reflect-demo/: Cargo.toml  reflectapi.json
reflect-demo/clients/rust/: Cargo.toml
reflect-demo/clients/typescript/: generated.ts  index.ts  package.json
reflect-demo/requests/: test.http
reflect-demo/src/: main.rs  test.rs  test_lib.rs
reflect-demo/src/snapshots/: reflect_demo__test__reflect_struct_empty_input.snap  reflect_demo__test__reflect_struct_empty_output.snap  reflect_demo__test__reflect_struct_newtype_input.snap  reflect_demo__test__reflect_struct_newtype_output.snap  reflect_demo__test__reflect_struct_one_basic_field.snap  reflect_demo__test__reflect_struct_one_basic_field_string.snap  reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_equally2_input.snap  reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_equally2_output.snap  reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_equally_input.snap  reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_equally_output.snap  reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_input.snap  reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_output.snap  reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_with_attributes_input.snap  reflect_demo__test__reflect_struct_one_basic_field_string_reflect_both_with_attributes_output.snap  reflect_demo__test__reflect_struct_one_basic_field_u32.snap  reflect_demo__test__reflect_struct_option_input.snap  reflect_demo__test__reflect_struct_option_output.snap  reflect_demo__test__reflect_struct_tuple_input.snap  reflect_demo__test__reflect_struct_tuple_output.snap  reflect_demo__test__reflect_struct_with_arc_input.snap  reflect_demo__test__reflect_struct_with_arc_output.snap  reflect_demo__test__reflect_struct_with_fixed_size_array_input.snap  reflect_demo__test__reflect_struct_with_fixed_size_array_output.snap  reflect_demo__test__reflect_struct_with_hashmap_input.snap  reflect_demo__test__reflect_struct_with_hashmap_output.snap  reflect_demo__test__reflect_struct_with_nested_external_input.snap  reflect_demo__test__reflect_struct_with_nested_external_output.snap  reflect_demo__test__reflect_struct_with_nested_input.snap  reflect_demo__test__reflect_struct_with_nested_output.snap  reflect_demo__test__reflect_struct_with_self_via_arc_input.snap  reflect_demo__test__reflect_struct_with_self_via_arc_output.snap  reflect_demo__test__reflect_struct_with_transform_array_input.snap  reflect_demo__test__reflect_struct_with_transform_array_output.snap  reflect_demo__test__reflect_struct_with_transform_both_input.snap  reflect_demo__test__reflect_struct_with_transform_both_output.snap  reflect_demo__test__reflect_struct_with_transform_fallback_input.snap  reflect_demo__test__reflect_struct_with_transform_fallback_nested_input.snap  reflect_demo__test__reflect_struct_with_transform_fallback_nested_output.snap  reflect_demo__test__reflect_struct_with_transform_fallback_output.snap  reflect_demo__test__reflect_struct_with_transform_input_input.snap  (+15 more)
reflect-demo/src/tests/: assert.rs  basic.rs  enums.rs  generics.rs  mod.rs  serde.rs  test_lib.rs
reflect-demo/tests/errors/: invalid_reflect_attribute_path.rs  invalid_reflect_attribute_path.stderr  invalid_reflect_attribute_path2.rs  invalid_reflect_attribute_path2.stderr  invalid_reflect_attribute_path3.rs  invalid_reflect_attribute_path3.rs.skip  invalid_reflect_attribute_path3.stderr  invalid_reflect_attributes.rs  invalid_reflect_attributes.stderr  invalid_reflect_enum.rs  invalid_reflect_enum.stderr  invalid_reflect_field_type_function.rs  invalid_reflect_field_type_function.stderr  invalid_reflect_field_type_function_generic.rs  invalid_reflect_field_type_function_generic.stderr  invalid_reflect_field_type_generic.rs  invalid_reflect_field_type_generic.stderr  invalid_reflect_field_type_trait.rs  invalid_reflect_field_type_trait.stderr  invalid_reflect_on_nested_struct.rs  invalid_reflect_type_generic.rs  (+10 more)
reflect-derive/: Cargo.toml
reflect-derive/src/: context.rs  derive.rs  lib.rs  parser.rs  symbol.rs  tokenizable_schema.rs
reflect-schema/: Cargo.toml
reflect-schema/src/: internal.rs  lib.rs  spec.rs
reflect/src/: axum.rs  empty.rs  infallible.rs  lib.rs  option.rs  traits.rs  validation.rs
reflectapi/: Cargo.toml  README.md
reflectapi-cli/: Cargo.toml  README.md  redoc.html
reflectapi-cli/src/: main.rs
reflectapi-cli/tests/: output_paths.rs
reflectapi-demo/: Cargo.toml  librust_out.rmeta  openapi.json  reflectapi.json
reflectapi-demo/requests/: json.http  msgpack.http  test.http
reflectapi-demo/src/: lib.rs  main.rs  redoc.html  scalar.html  swagger-ui.html
reflectapi-demo/tests/: codegen_coverage.rs
reflectapi-derive/: Cargo.toml  README.md
reflectapi-derive/src/: context.rs  derive.rs  lib.rs  parser.rs  symbol.rs  tokenizable_schema.rs
reflectapi-python-runtime/: .coverage  README.md  coverage.xml  pyproject.toml
reflectapi-python-runtime/tests/: __init__.py  test_auth.py  test_auth_negative_cases.py  test_batch.py  test_client.py  test_codegen_regressions.py  test_edge_cases.py  test_enhanced_features.py  test_exceptions.py  test_middleware.py  test_option.py  test_partial.py  test_pydantic_serialization.py  test_response.py  test_sse.py  test_streaming.py  test_testing.py
reflectapi-schema/: Cargo.toml  README.md
reflectapi-schema-codegen/: Cargo.toml  README.md
reflectapi-schema-codegen/src/: ids.rs  lib.rs  normalize.rs  semantic.rs
reflectapi-schema/src/: codegen.rs  ids.rs  internal.rs  lib.rs  normalize.rs  openapi.rs  rename.rs  semantic.rs  spec.rs  subst.rs  symbol.rs  visit.rs
reflectapi/src/: axum.rs  empty.rs  infallible.rs  lib.rs  option.rs  possible.rs  rt.rs  traits.rs  validation.rs
(+1493 files in other folders)
