[workspace]
members = [
    "reflectapi",
    "reflectapi-cli",
    "reflectapi-demo",
    "reflectapi-demo/clients/rust",
    "reflectapi-derive",
    "reflectapi-schema",
]
resolver = "2"

[workspace.dependencies]
reflectapi = { path = "reflectapi" }
reflectapi-derive = { path = "reflectapi-derive" }
reflectapi-schema = { path = "reflectapi-schema" }
