[workspace]
members = [
    "reflectapi",
    "reflectapi-cli",
    "reflectapi-demo",
    "reflectapi-demo/clients/rust",
    "reflectapi-demo/clients/rust/generated",
    "reflectapi-derive",
    "reflectapi-schema",
]
resolver = "2"

[workspace.dependencies]
# this is the only one which is referenced via workspace dependency
reflectapi = { path = "reflectapi" }
