[workspace]
members = [
    "reflectapi",
    "reflectapi-cli",
    "reflectapi-demo",
    "reflectapi-demo/clients/rust",
    "reflectapi-demo/clients/rust/generated",
    "reflectapi-derive",
    "reflectapi-schema",
]
resolver = "2"

[workspace.dependencies]
reflectapi = { path = "reflectapi" }

[workspace.lints.rust]
rust_2018_idioms = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
