[package]
name = "reflect-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflect = { workspace = true, features = ["uuid"] }

serde = { version = "1.0.197", features = ["derive"] }

uuid = "1.7.0"

[dev-dependencies]
trybuild = "1.0.0"
insta = { version = "1.36.1", features = ["json"] }
