[package]
name = "reflect-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflect = { workspace = true, features = ["uuid"] }
reflect-builder = { workspace = true }
reflect-axum = { workspace = true }

tokio = { version = "1.5.0", features = ["full"] }
axum = "0.7.4"

uuid = "1.7.0"
bytes = "1.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dev-dependencies]
trybuild = "1.0.0"
insta = { version = "1.36.1", features = ["json"] }
