[package]
name = "reflect-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.52", features = ["extra-traits"] }
serde_derive_internals = "0.29.0"
proc-macro-error = "1.0.0"

reflect-schema = { workspace = true }
