[package]
name = "reflect-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

# This is unnecessary long term,
# but we use it for now to speed up the development
serde_json = "1.0.114"
