[package]
name = "reflect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflect-derive.workspace = true
reflect-schema.workspace = true

serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.114", optional = true }

bytes = { version = "1.5.0", optional = true }
uuid = { version = "1.7.0", optional = true }

axum = { version = "0.7.4", optional = true }

[features]
uuid = ["dep:uuid"]
empty = ["dep:serde"]
infallible = ["dep:serde"]
builder = ["dep:serde", "dep:serde_json", "dep:bytes"]
axum = ["dep:axum"]
