[package]
name = "reflect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace dependencies
reflect-derive.workspace = true
reflect-schema.workspace = true

# mandatory 3rd party dependencies
serde = { version = "1.0.197", features = ["derive"] }

# optional 3rd party dependencies for implementing schema builder
serde_json = { version = "1.0.114", optional = true }
bytes = { version = "1.5.0", optional = true }

# optional 3rd party dependencies for implementing reflects traits for foreigh types
uuid = { version = "1.7.0", optional = true }
chrono = { version = "0.4.37", optional = true }

# optional 3rd party dependencies for transforming reflect schema
# to runnable servers based on dififerent web server frameworks
axum = { version = "0.7.4", optional = true }

# optional 3rd party dependencies for enabling codegen
askama = { version = "0.12.1", optional = true }
anyhow = { version = "1.0.81", optional = true }
indexmap = { version = "2.2.6", optional = true }

[features]
# feature for implementing schema builder
builder = ["dep:serde_json", "dep:bytes"]
# features for implementing reflect traits for foreigh types
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
# features for transforming reflect schema to runnable servers
# based on dififerent web server frameworks
axum = ["dep:axum"]
# feature flag for enabling codegen libraries
codegen = ["dep:askama", "dep:anyhow", "dep:indexmap"]
