[package]
name = "reflectapi-cli"
version = "0.4.0"
edition = "2021"

license = "MIT"
description = "CLI for reflectapi"
homepage = "https://github.com/thepartly/reflectapi"
documentation = "https://docs.rs/reflectapi-cli"
repository = "https://github.com/thepartly/reflectapi"
readme = "README.md"

keywords = ["reflectapi", "reflection", "cli", "codegen", "restapi-client"]
categories = ["web-programming", "development-tools", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflectapi = { path = "../reflectapi", version = "0.4.0", features = ["codegen"] }

clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
askama = "0.12.1"

anyhow = "1.0.81"
serde_json = "1.0.114"
