[package]
name = "reflectapi-cli"
version = "0.14.4"
edition = "2021"
default-run = "reflectapi"

license = "MIT"
description = "CLI for reflectapi"
homepage = "https://github.com/thepartly/reflectapi"
documentation = "https://docs.rs/reflectapi-cli"
repository = "https://github.com/thepartly/reflectapi"
readme = "README.md"

keywords = ["reflectapi", "reflection", "cli", "codegen", "restapi-client"]
categories = ["web-programming", "development-tools", "api-bindings"]

[[bin]]
name = "reflectapi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
reflectapi = { path = "../reflectapi", version = "0.14.4", features = ["codegen"] }
rouille = "3"

clap = { version = "4.5.3", features = ["derive"] }
clap_derive = "4.5.3"
askama = "0.12.1"

anyhow = "1.0.81"
serde_json = "1.0.114"

