[package]
name = "reflectapi-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflectapi = { workspace = true, features = [
    "uuid",
    "chrono",
    "url",
    "builder",
    "axum",
    "codegen",
    "msgpack",
    "openapi",
] }

tokio = { version = "1.5.0", features = ["full"] }
axum = "0.7.4"
http = "1.1.0"
tower-http = { version = "0.5.2", features = ["trace", "cors", "timeout"] }

uuid = "1.7.0"
chrono = { version = "0.4.37", features = ["serde"] }
bytes = "1.5.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"

[dev-dependencies]
trybuild = "1.0.0"
insta = { version = "1.36.1", features = ["json"] }
tower = "0.4.0"
http-rest-file = "0.5.1"
datatest-stable = "0.2.9"
anyhow = "1.0.81"
rmp-serde = "1.3.0"

[[test]]
name = "run"
harness = false

