[package]
name = "reflectapi-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
reflectapi = { workspace = true, features = [
    "uuid",
    "chrono",
    "url",
    "builder",
    "axum",
    "codegen",
    "msgpack",
    "json",
    "indexmap"
] }

tokio = { version = "1.5.0", features = ["full"] }
axum = "0.8.1"
http = "1.2.0"
tower-http = { version = "0.6.2", features = ["trace", "cors", "timeout"] }

futures-util = "0.3.28"
uuid = "1.7.0"
chrono = { version = "0.4.37", features = ["serde"] }
bytes = "1.5.0"
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
indexmap = "2.2.6"
url = "2.5.0"
async-stream = "0.3.6"

[dev-dependencies]
anyhow = "1"
trybuild = "1.0.0"
insta = { version = "1.36.1", features = ["json"] }
tower = "0.4.0"
http-rest-file = "0.5.1"
datatest-stable = "0.2.9"
rmp-serde = "1.3.0"

[[test]]
name = "run"
harness = false
