[package]
name = "reflectapi-schema"
version = "0.14.5"
edition = "2021"

license = "MIT"
description = "A library for defining and serializing/deserializing ReflectAPI schemas"
homepage = "https://github.com/thepartly/reflectapi"
documentation = "https://docs.rs/reflectapi-schema"
repository = "https://github.com/thepartly/reflectapi"
readme = "README.md"

keywords = [
    "reflectapi",
    "reflection",
    "schema",
    "serialization",
    "deserialization",
]
categories = ["web-programming", "development-tools", "api-bindings"]

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
glob = { version = "0.3.0", optional = true }

[features]
default = ["glob"]

