[package]
name = "reflectapi"
version = "0.4.2"
edition = "2021"

license = "MIT"
description = "ReflectAPI is a library for Rust code-first web service API declaration and corresponding clients code generation tools."
homepage = "https://github.com/thepartly/reflectapi"
documentation = "https://docs.rs/reflectapi"
repository = "https://github.com/thepartly/reflectapi"
readme = "README.md"

keywords = ["reflectapi", "codegen", "reflection", "restapi", "openapi"]
categories = ["web-programming", "development-tools", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace dependencies
reflectapi-derive = { path = "../reflectapi-derive", version = "0.4.2" }
reflectapi-schema = { path = "../reflectapi-schema", version = "0.4.2" }

# mandatory 3rd party dependencies
serde = { version = "1.0.197", features = ["derive"] }

# optional 3rd party dependencies for implementing schema builder
serde_json = { version = "1.0.114", optional = true }
bytes = { version = "1.5.0", optional = true }

# optional 3rd party dependencies for implementing reflects traits for foreigh types
uuid = { version = "1.7.0", optional = true }
chrono = { version = "0.4.37", optional = true }

# optional 3rd party dependencies for transforming reflect schema
# to runnable servers based on dififerent web server frameworks
axum = { version = "0.7.4", optional = true }

# optional 3rd party dependencies for enabling codegen
askama = { version = "0.12.1", optional = true }
anyhow = { version = "1.0.81", optional = true }
indexmap = { version = "2.2.6", optional = true }

[features]
# feature for implementing schema builder
builder = ["dep:serde_json", "dep:bytes"]
# features for implementing reflect traits for foreigh types
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
# features for transforming reflect schema to runnable servers
# based on dififerent web server frameworks
axum = ["dep:axum"]
# feature flag for enabling codegen libraries
codegen = ["dep:askama", "dep:anyhow", "dep:indexmap"]
