[project]
name = "reflectapi-demo-python-client"
version = "0.1.0"
description = "Generated Python client for ReflectAPI demo"
requires-python = ">=3.12"
dependencies = ["reflectapi-runtime"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "pytest-asyncio>=0.21.0", "ruff>=0.12.5"]

[tool.uv.sources]
reflectapi-runtime = { path = "../../../reflectapi-python-runtime", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
