[package]
name = "reflectapi-demo-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflectapi = { workspace = true, version = "0.1.0" }

bytes = "1.5.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }

reqwest = { version = "0.12.2", optional = true }

[features]
reqwest = ["dep:reqwest"]
