[package]
name = "reflectapi-demo-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reflectapi-demo-client-generated = { path = "generated" }

tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.2" }

reflectapi.workspace = true
